--- a/assets/css/destaques.css
+++ b/assets/css/destaques.css
@@ -12,18 +12,20 @@
     height: calc(100vh - 50px);
 }
 
-.destaques__titulo {
-    background: rgba(0, 0, 0, .5);
-    color: #fdfdfd;
-    padding: .6rem;
-    text-align: center;
-    width: 100%;
-}
-
 .destaques__principal {
-    background: url('../img/fortnite.jpg') center / cover no-repeat;
+    background: url('../img/fortnite.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    /* para evitar las 3 lineas de arriba puedo usar:
+    background: url('/assets/img/fortnite.jpg') center / cover no-repeat; */
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    /* para evitar las 4 lineas de arriba puedo usar:
     grid-column: 1 / 4;
-    grid-row: 1 / 3;
+    grid-row: 1 / 3; */
 }
 
 .destaques__secundario:nth-child(2) {
@@ -74,4 +76,12 @@
 
 .destaques__categorias___link {
     color: inherit;
+}
+
+.destaques__titulo {
+    background: rgba(0, 0, 0, .5);
+    color: #fdfdfd;
+    padding: .6rem;
+    text-align: center;
+    width: 100%;
 }
