--- a/assets/css/populares.css
+++ b/assets/css/populares.css
@@ -20,9 +20,10 @@
     width: calc(20% - 1rem);
 }
 
-.populares__card:last-child {
+/* *lo paso a responsivo en más de 1200px */
+/* .populares__card:last-child {
     margin-right: 0;
-}
+} */
 
 .populares__card___imagen {
     grid-area: card-imagen;
