--- a/assets/css/responsivo.css
+++ b/assets/css/responsivo.css
@@ -1,5 +1,8 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+    .encabezado {
+        padding: 0;
+    }
 
     .destaques__secundario:nth-child(2),
     .destaques__secundario:nth-child(3),
@@ -13,36 +16,118 @@
     .destaques__principal,
     .destaques__categorias {
         grid-column: 1 / 5;
-
     }
-    .populares__contenido {
-        flex-direction: column;
-
-    }
+    
     .populares__card {
-    width: 100%;
-    margin-bottom: 3rem;
+        width: 100%;
+        margin-bottom: 3rem;
     }
-
-
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-    ...
+/* Small devices (portrait tablets and large phones, 601px and up) */
+@media only screen and (min-width: 601px) {
+    .destaques {
+        display: grid;
+        grid-gap: .2rem;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: repeat(5, 1fr);;
+    }
+    
+    .destaques__secundario:nth-child(2) {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+    }
+    
+    .destaques__secundario:nth-child(3) {
+        grid-column: 2 / 3;
+        grid-row: 3 / 4;
+    }
+    
+    .destaques__secundario:nth-child(4) {
+        grid-column: 3 / 4;
+        grid-row: 3 / 4;
+    }
+    
+    .destaques__secundario:nth-child(5) {
+        grid-column: 1 / 5;
+        grid-row: 4 / 5;
+    }
+    
+    .destaques__categorias {
+        grid-column: 1 / 4;
+        grid-row: 5 / 6;
+    }
+
+    .populares__contenido {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .populares__card {
+        width: unset;
+        margin-bottom: 1rem;
+    }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-    ...
+    .populares__contenido {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-    ...
+    .destaques {
+        grid-template-columns: 25% 25% 25% 25%;
+        grid-template-rows: 33.33% 33.33% 33.33%;
+        height: calc(100vh - 50px);
+    }
+
+    .destaques__secundario:nth-child(2) {
+        grid-column: 4 / 4;
+        grid-row: 1 / 1;
+    }
+    
+    .destaques__secundario:nth-child(3) {
+        grid-column: 4 / 4;
+        grid-row: 2 / 2;
+    }
+    
+    .destaques__secundario:nth-child(4) {
+        grid-column: 4 / 4;
+        grid-row: 3 / 3;
+    }
+    
+    .destaques__secundario:nth-child(5) {
+        grid-column: 3 / 3;
+        grid-row: 3 / 3;
+    }
+    
+    .destaques__categorias {
+        grid-column: 1 / 3;
+        grid-row: 3 / 3;
+    }
+
+    .populares__contenido {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
-    ...
+    .populares__contenido {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 1rem 0rem;
+    }
+
+    .populares__card {
+        width: calc(20% - 1rem);
+        margin-bottom: unset;
+    }
+
+    .populares__card:last-child {
+        margin-right: 0;
+    }
 }
